Fix title spacing

--- a/pages/global-style.css
+++ b/pages/global-style.css
@@ -639,7 +639,7 @@ body[data-section="contact"] #contact {
 }*/
 
 .section-titre>a {
-  margin-top: 0;
+  margin-top: auto;
   padding: 0;
 }
 
